--- a/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
+++ b/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
@@ -61,7 +61,7 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
         func createEmbeddableModule(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, lazyAllocation: Bool) -> {{ prefix }}{{ module_info.name }}EmbeddableEmbedBlock {
 
-            var embeddedInput: {{ prefix }}{{ module_info.name }}EmbeddableModuleInput?
+            weak var embeddedInput: {{ prefix }}{{ module_info.name }}EmbeddableModuleInput?
 
             let factory = {{ prefix }}{{ module_info.name }}EmbeddableModuleConfigurator()
             let configurationBlock: EmbeddedModuleConfigurationBlock = { (moduleInput) -> RamblerViperModuleOutput? in
@@ -96,6 +96,7 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
                     embedBalanceCounter -= 1
                     assert(embedBalanceCounter >= 0)
                     if embedBalanceCounter == 0 {
+                        let embeddedInput = embeddedInput // keep strong ref
                         nativeRemover()
                         // Example:
                         //embeddedInput?.moduleDidBecomeInvisible()
