--- a/Code/View/view_controller.swiftui.swift.liquid
+++ b/Code/View/view_controller.swiftui.swift.liquid
@@ -21,7 +21,10 @@ class {{ prefix }}{{ module_info.name }}ViewControllerImpl<Content>: UIHostingCo
     }
 
     // MARK: - {{ prefix }}{{module_info.name}}ViewInput
-    // TODO: Place your code here
+    
+    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+        // TODO: Place your code here
+    }
 
     // MARK: - Helpers
     // TODO: Place your code here
