--- a/Code/View/view_controller.transparent.swift.liquid
+++ b/Code/View/view_controller.transparent.swift.liquid
@@ -32,7 +32,10 @@ class {{ prefix }}{{ module_info.name }}ViewController: TransparentProxyViewCont
     }
 
     // MARK: - {{ prefix }}{{module_info.name}}ViewInput
-    // TODO: Place your code here
+    
+    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+        // TODO: Place your code here
+    }
 
     // MARK: - UI Actions
     // TODO: Place your code here
