--- a/Code/View/view_input.alert.swift.liquid
+++ b/Code/View/view_input.alert.swift.liquid
@@ -2,6 +2,7 @@
 
 protocol {{ prefix }}{{ module_info.name }}ViewInput: class {
 
+    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme)
     func setAlertTitle(_ title: String?)
     func setAlertMessage(_ message: String?)
 
