--- a/Code/View/view_input.swift.liquid
+++ b/Code/View/view_input.swift.liquid
@@ -2,4 +2,6 @@
 
 protocol {{ prefix }}{{ module_info.name }}ViewInput: class {
 
+    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme)
+
 }
