--- a/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
@@ -50,6 +50,9 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
         default:
             fatalError()
         }
+
+        view.configure(with: .init())
+
         if !interactor.isDeliveringModelsListChanges() {
             interactor.startDeliveringModelsListChanges()
         }
