--- a/Code/Presenter/presenter.mcflurry.embed.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.embed.swift.liquid
@@ -49,6 +49,8 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
         default:
             fatalError()
         }
+
+        view.configure(with: .init())
         router.embedSomeModule()
         // TODO: Place your code here
     }
