--- a/Code/View/view_controller.alert.swift.liquid
+++ b/Code/View/view_controller.alert.swift.liquid
@@ -35,6 +35,10 @@ class {{ prefix }}{{ module_info.name }}ViewController: TransparentProxyViewCont
 
     // MARK: - {{ prefix }}{{module_info.name}}ViewInput
 
+    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+        // TODO: Place your code here
+    }
+
     func setAlertTitle(_ title: String?) {
         alertTitle = title
     }
