--- a/Code/View/view_controller.complex.root_tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.root_tableview.cachetracker.swift.liquid
@@ -30,6 +30,10 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
 
     // MARK: - {{ prefix }}{{module_info.name}}ViewInput
 
+    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+        // TODO: Place your code here
+    }
+
     func loadInitialModelsList(_ state: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>]) {
         consumer.reset(with: state)
         tableView?.reloadData()
