--- a/Code/View/view_controller.embed.swift.liquid
+++ b/Code/View/view_controller.embed.swift.liquid
@@ -26,7 +26,10 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {% if 
     }
 
     // MARK: - {{ prefix }}{{module_info.name}}ViewInput
-    // TODO: Place your code here
+    
+    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+        // TODO: Place your code here
+    }
 
     // MARK: - UI Actions
     // TODO: Place your code here
