--- a/Code/View/view_controller.swift.liquid
+++ b/Code/View/view_controller.swift.liquid
@@ -22,7 +22,10 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {{ pre
     }
 
     // MARK: - {{ prefix }}{{module_info.name}}ViewInput
-    // TODO: Place your code here
+    
+    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+        // TODO: Place your code here
+    }
 
     // MARK: - UI Actions
     // TODO: Place your code here
