--- a/Code/View/view_input.complex.cachetracker.swift.liquid
+++ b/Code/View/view_input.complex.cachetracker.swift.liquid
@@ -4,6 +4,7 @@ import CacheTracker
 
 protocol {{ prefix }}{{ module_info.name }}ViewInput: class {
 
+    func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme)
     func loadInitialModelsList(_ state: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>])
     func applyModelsListChanges(_ changes: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>])
 
