--- a/Tests/Presenter/presenter_tests.alert.swift.liquid
+++ b/Tests/Presenter/presenter_tests.alert.swift.liquid
@@ -49,6 +49,10 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
         // MARK: - {{ prefix }}{{ module_info.name }}ViewInput
 
+        func configure(with theme: {{ prefix }}{{ module_info.name }}ViewInputTheme) {
+            // TODO: Place your code here
+        }
+
         func setAlertTitle(_ title: String?) {
             self.title = title
         }
