--- a/Code/Presenter/presenter.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.alert.swift.liquid
@@ -67,12 +67,8 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     // MARK: - {{ prefix }}{{module_info.name}}ModuleInput
 
     func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
-        switch state {
-        case .initial:
-            state = .ready(isViewReady: false)
-        default:
-            fatalError()
-        }
+        guard case .initial = state else { fatalError() }
+        state = .ready(isViewReady: false)
         self.config = config
         {% if custom_parameters.extended_configure %}interactor.configure(with: config){% else %}interactor.configure(){% endif %}
     }
