add some image features

--- a/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
+++ b/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
@@ -5,16 +5,31 @@ import UIKit
 class {{ prefix }}{{ module_info.name }}ViewCell: UITableViewCell {
 
     // MARK: - Outlets
+    // @IBOutlet weak var imageView: UIImageView!
     // TODO: Place your code here
 
     // MARK: - Vars
-    
+
     private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext?
+    private final var model: {{ prefix }}{{ module_info.name }}ModuleEntityModel?
 
     // MARK: - Public
 
     func configure(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, in context: {{ prefix }}{{ module_info.name }}ViewCellContext) {
         self.context = context
+        self.model = model
+
+//        context.loadModelImage(model) { image in
+//
+//            assert(Thread.isMainThread)
+//
+//            guard model == self.model else {
+//                return
+//            }
+//
+//            self.imageView.image = image
+//        }
+
         // TODO: Place your code here
     }
 
@@ -24,6 +39,14 @@ class {{ prefix }}{{ module_info.name }}ViewCell: UITableViewCell {
 
     func stopDisplay() {
         // TODO: Place your code here
+    }
+
+    // MARK: - Life cycle
+
+    override func prepareForReuse() {
+        super.prepareForReuse()
+        model = nil
+        context = nil
     }
 
     // MARK: - Helpers
