--- a/Code/Presenter/module_output.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/module_output.mcflurry.alert.swift.liquid
@@ -1,6 +1,6 @@
 {% include 'header' %}
 
-import {% if custom_parameters.mcflurry_swift %}ViperMcFlurryX_Swift{% else %}ViperMcFlurryX{% endif %}
+import {% if custom_parameters.mcflurry_swift == 'true' %}ViperMcFlurryX_Swift{% else %}ViperMcFlurryX{% endif %}
 
 {% if custom_parameters.mcflurry_swift != "true" %}@objc{% endif %}
 protocol {{ prefix }}{{ module_info.name }}ModuleOutput: {% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}ViperModuleOutput {
