--- a/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
@@ -1,7 +1,7 @@
 {% include 'header' %}
 
 import Foundation
-import {% if custom_parameters.mcflurry_swift %}ViperMcFlurryX_Swift{% else %}ViperMcFlurryX{% endif %}
+import {% if custom_parameters.mcflurry_swift == 'true' %}ViperMcFlurryX_Swift{% else %}ViperMcFlurryX{% endif %}
 import CacheTracker
 
 fileprivate enum {{ prefix }}{{ module_info.name }}PresenterState: Equatable {
