--- a/Code/View/view_controller.tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.tableview.cachetracker.swift.liquid
@@ -62,7 +62,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
     func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
         let cell = tableView.dequeueReusableCell(withIdentifier: "Default") as! {{ prefix }}{{ module_info.name }}ViewCell
         let model = consumer.object(at: indexPath.row)
-        cell.configure(with: model)
+        cell.configure(with: model, in: context)
         return cell
     }
 
