add table_as_root and array entity

--- a/Code/Helpers/moduleentitymodel.cachetracker_array.swift.liquid
+++ b/Code/Helpers/moduleentitymodel.cachetracker_array.swift.liquid
@@ -24,6 +24,6 @@ extension {{ prefix }}{{ module_info.name }}ModuleEntityModel: ArrayCacheTracker
     }
 
     static func sort(_ descriptors: [NSSortDescriptor], lhs: Self, rhs: Self) -> Bool {
-        return true
+        return false
     }
 }
