--- a/Code/View/view_controller.complex.root_collectionview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.root_collectionview.cachetracker.swift.liquid
@@ -15,8 +15,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewControll
 
     // MARK: - Vars
 
-    private final let consumer: CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel> = CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>()
-    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
+    private let consumer: CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel> = CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>()
+    private var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
     
     // MARK: - Life cycle
 
@@ -106,7 +106,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewControll
 
     // MARK: - Helpers
 
-    private final func setupContext() {
+    private func setupContext() {
         context = {{ prefix }}{{ module_info.name }}ViewCellContext(
              //loadModelImage: { [weak self] model, completion in
             //
@@ -119,11 +119,11 @@ class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewControll
         )
     }
 
-    private final func setupConsumer() {
+    private func setupConsumer() {
         consumer.delegate = self
     }
 
-    private final func setupCollectioView() {
+    private func setupCollectioView() {
         // TODO: Place your code here
     }
 }
