--- a/Code/View/view_controller.root_tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.root_tableview.cachetracker.swift.liquid
@@ -15,8 +15,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
 
     // MARK: - Vars
 
-    private final let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
-    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
+    private let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
+    private var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
 
     // MARK: - Life cycle
 
@@ -84,7 +84,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
 
     // MARK: - Helpers
 
-    private final func setupContext() {
+    private func setupContext() {
         context = {{ prefix }}{{ module_info.name }}ViewCellContext(
              //loadModelImage: { [weak self] model, completion in
             //
@@ -97,11 +97,11 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
         )
     }
 
-    private final func setupConsumer() {
+    private func setupConsumer() {
         consumer.delegate = self
     }
 
-    private final func setupTableView() {
+    private func setupTableView() {
         // TODO: Place your code here
     }
 
