--- a/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
+++ b/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
@@ -10,8 +10,8 @@ class {{ prefix }}{{ module_info.name }}ViewCell: UITableViewCell {
 
     // MARK: - Vars
 
-    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext?
-    private final var model: {{ prefix }}{{ module_info.name }}ModuleEntityModel?
+    private var context: {{ prefix }}{{ module_info.name }}ViewCellContext?
+    private var model: {{ prefix }}{{ module_info.name }}ModuleEntityModel?
 
     // MARK: - Public
 
