--- a/Code/View/view_controller.tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.tableview.cachetracker.swift.liquid
@@ -16,8 +16,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
 
     // MARK: - Vars
 
-    private final let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
-    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
+    private let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
+    private var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
     
     // MARK: - Life cycle
 
@@ -85,7 +85,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
 
     // MARK: - Helpers
 
-    private final func setupContext() {
+    private func setupContext() {
         context = {{ prefix }}{{ module_info.name }}ViewCellContext(
              //loadModelImage: { [weak self] model, completion in
             //
@@ -98,11 +98,11 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
         )
     }
 
-    private final func setupConsumer() {
+    private func setupConsumer() {
         consumer.delegate = tableView
     }
 
-    private final func setupTableView() {
+    private func setupTableView() {
         // TODO: Place your code here
     }
 
