--- a/Tests/Presenter/presenter_tests.alert.swift.liquid
+++ b/Tests/Presenter/presenter_tests.alert.swift.liquid
@@ -44,8 +44,8 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
         // MARK: - Vars
 
-        private final var title: String?
-        private final var message: String?
+        private var title: String?
+        private var message: String?
 
         // MARK: - {{ prefix }}{{ module_info.name }}ViewInput
 
