--- a/Tests/Presenter/presenter_tests.cachetracker.swift.liquid
+++ b/Tests/Presenter/presenter_tests.cachetracker.swift.liquid
@@ -19,7 +19,7 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
         // MARK: - Vars
 
-        private final var tracking = false
+        private var tracking = false
 
         // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
 
