--- a/Code/Presenter/presenter.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.alert.swift.liquid
@@ -17,12 +17,12 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     var interactor: {{ prefix }}{{ module_info.name }}InteractorInput!
     var router: {{ prefix }}{{ module_info.name }}RouterInput!
     weak var output: {{ prefix }}{{module_info.name}}ModuleOutput?
-    private final var state: {{ prefix }}{{ module_info.name }}PresenterState = .initial
+    private var state: {{ prefix }}{{ module_info.name }}PresenterState = .initial
 
     // MARK: - Vars
 
-    private final var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!
-    private final var dismissed = false
+    private var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!
+    private var dismissed = false
 
     // MARK: - Life cycle
 
