--- a/Code/Presenter/presenter.mcflurry.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.swift.liquid
@@ -17,11 +17,11 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     var interactor: {{ prefix }}{{ module_info.name }}InteractorInput!
     var router: {{ prefix }}{{ module_info.name }}RouterInput!
     weak var output: {{ prefix }}{{module_info.name}}ModuleOutput?
-    private final var state: {{ prefix }}{{ module_info.name }}PresenterState = .initial
+    private var state: {{ prefix }}{{ module_info.name }}PresenterState = .initial
 
     // MARK: - Vars
 
-    {% if custom_parameters.extended_configure %}private final var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!{% else %}// TODO: Place your code here{% endif %}
+    {% if custom_parameters.extended_configure %}private var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!{% else %}// TODO: Place your code here{% endif %}
 
     // MARK: - Life cycle
 
