--- a/Code/View/view_controller.collectionview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.collectionview.cachetracker.swift.liquid
@@ -16,8 +16,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UIColl
 
     // MARK: - Vars
 
-    private final let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
-    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
+    private let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
+    private var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
 
     // MARK: - Life cycle
 
@@ -106,7 +106,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UIColl
 
     // MARK: - Helpers
 
-    private final func setupContext() {
+    private func setupContext() {
         context = {{ prefix }}{{ module_info.name }}ViewCellContext(
             //loadModelImage: { [weak self] model, completion in
             //
@@ -119,11 +119,11 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UIColl
         )
     }
 
-    private final func setupConsumer() {
+    private func setupConsumer() {
         consumer.delegate = collectionView
     }
 
-    private final func setupCollectioView() {
+    private func setupCollectioView() {
         // TODO: Place your code here
     }
 
