--- a/Code/View/view_controller.complex.root_tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.root_tableview.cachetracker.swift.liquid
@@ -15,8 +15,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
 
     // MARK: - Vars
 
-    private final let consumer: CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel> = CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>()
-    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
+    private let consumer: CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel> = CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>()
+    private var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
 
     // MARK: - Life cycle
 
@@ -85,7 +85,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
 
     // MARK: - Helpers
 
-    private final func setupContext() {
+    private func setupContext() {
         context = {{ prefix }}{{ module_info.name }}ViewCellContext(
              //loadModelImage: { [weak self] model, completion in
             //
@@ -98,11 +98,11 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
         )
     }
 
-    private final func setupConsumer() {
+    private func setupConsumer() {
         consumer.delegate = self
     }
 
-    private final func setupTableView() {
+    private func setupTableView() {
         // TODO: Place your code here
     }
 
