--- a/Code/View/view_controller.complex.tableview.cachetracker.cell.swift.liquid
+++ b/Code/View/view_controller.complex.tableview.cachetracker.cell.swift.liquid
@@ -10,9 +10,9 @@ class {{ prefix }}{{ module_info.name }}ViewCell: UITableViewCell {
 
     // MARK: - Vars
 
-    private final var removeEmbeddableBlock: {{ prefix }}{{ module_info.name }}EmbeddableRemoveBlock?
-    private final var context: {{ prefix }}{{ module_info.name }}ViewCellContext?
-    private final var model: {{ prefix }}{{ module_info.name }}ModuleEntityModel?
+    private var removeEmbeddableBlock: {{ prefix }}{{ module_info.name }}EmbeddableRemoveBlock?
+    private var context: {{ prefix }}{{ module_info.name }}ViewCellContext?
+    private var model: {{ prefix }}{{ module_info.name }}ModuleEntityModel?
 
     // MARK: - Public
 
