--- a/Code/View/view_controller.uikitplus.swift.liquid
+++ b/Code/View/view_controller.uikitplus.swift.liquid
@@ -2,7 +2,7 @@
 
 import UIKitPlus
 
-class {{ prefix }}{{ module_info.name }}ViewController: ViewController {
+class {{ prefix }}{{ module_info.name }}ViewController: UIViewController {
 
     // MARK: - VIPER Vars
 
@@ -12,23 +12,27 @@ class {{ prefix }}{{ module_info.name }}ViewController: ViewController {
     // TODO: Place your code here
 
     // MARK: - Vars
-    // TODO: Place your code here
+    
+    private var wrapperController: {{ prefix }}{{ module_info.name }}ViewControllerWrapper?
 
     // MARK: - Life cycle
 
-    override func buildUI() {
-        super.buildUI()
-        view.backgroundColor = .red
-        body {
-            Text("Hello World").centerInSuperview()
-        }
-    }
-
     override func viewDidLoad() {
         super.viewDidLoad()
+        view.backgroundColor = .clear
+        wrapperController = {{ prefix }}{{ module_info.name }}ViewControllerWrapper()
+        wrapperController!.owner = self
+        addChild(wrapperController!)
+        wrapperController!.view.frame = view.bounds
+        view.addSubview(wrapperController!.view)
+        wrapperController!.didMove(toParent: self)
         output.viewIsReady()
     }
 
+    override func viewDidLayoutSubviews() {
+        super.viewDidLayoutSubviews()
+        wrapperController?.view.frame = view.bounds
+    }
 }
 
 fileprivate extension {{ prefix }}{{ module_info.name }}ViewController {
@@ -52,13 +56,29 @@ extension {{ prefix }}{{ module_info.name }}ViewController:  {{ prefix }}{{modul
 
 }
 
+class {{ prefix }}{{ module_info.name }}ViewControllerWrapper: ViewController {
+
+    weak var owner: {{ prefix }}{{ module_info.name }}ViewController?
+
+    // MARK: - Life cycle
+
+    override func buildUI() {
+        super.buildUI()
+        view.backgroundColor = .red
+        body {
+            Text("Hello World").centerInSuperview()
+        }
+    }
+
+}
+
 #if canImport(SwiftUI) && DEBUG
 import SwiftUI
 @available(iOS 13.0, *)
 struct {{ prefix }}{{ module_info.name }}ViewController_Preview: PreviewProvider, DeclarativePreview {
     static var preview: Preview {
         Preview {
-            {{ prefix }}{{ module_info.name }}ViewController()
+            {{ prefix }}{{ module_info.name }}ViewControllerWrapper()
         }
         .colorScheme(.dark)
         .device(.iPhoneX)
