update tabbar templates, array cachetracker

--- a/Code/Helpers/moduleentitymodel.cachetracker.swift.liquid
+++ b/Code/Helpers/moduleentitymodel.cachetracker.swift.liquid
@@ -5,10 +5,8 @@ import Foundation
 // TODO: Replace SomeModuleEntityModel with project model implementing CacheTracker/CacheTrackerPlainModel protocol
 // Example:
 //  import CacheTracker
-//  class SomeModuleEntityModel: CacheTrackerPlainModel {
-//      // MARK: - CacheTrackerPlainModel
-//      required init() {}
-//  }
+//  class SomeModuleEntityModel { }
+//  extension SomeModuleEntityModel: CacheTrackerPlainModel {}
 //  More info at https://github.com/ladeiko/CacheTracker
 
 typealias {{ prefix }}{{ module_info.name }}ModuleEntityModel = SomeModuleEntityModel
