--- a/Code/Configurator/tabbar.configurator.mcflurry.swift.liquid
+++ b/Code/Configurator/tabbar.configurator.mcflurry.swift.liquid
@@ -35,6 +35,7 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
 
         router.transitionHandler = viewController
         router.calleeOutput = presenter
+        router.output = presenter
 
         viewController.onWillDeallocate {
             presenter.willDeinit()
@@ -43,20 +44,6 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
         {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
         presenter.configure(with: config)
         {% endif %}
-
-        viewController.viewControllers = [
-        /*
-            UINavigationController(rootViewController: SomeModuleConfigurator1().create()),
-            UINavigationController(rootViewController: SomeModuleConfigurator2().create()),
-        */
-        ]
-
-        viewController.viewControllers?.forEach({ (childViewController) in
-            if let navigationController = childViewController as? UINavigationController {
-                // Propagate tabBarItem of child to the navigation controller
-                childViewController.tabBarItem = navigationController.viewControllers[0].tabBarItem
-            }
-        })
     }
 
     func create({% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig{% endif %}) -> UIViewController {
