--- a/Code/Helpers/moduleentitymodel.cachetracker_array.swift.liquid
+++ b/Code/Helpers/moduleentitymodel.cachetracker_array.swift.liquid
@@ -6,10 +6,8 @@ import CacheTracker
 // TODO: Replace SomeModuleEntityModel with project model implementing CacheTracker/CacheTrackerPlainModel protocol
 // Example:
 //  import CacheTracker
-//  class SomeModuleEntityModel: CacheTrackerPlainModel {
-//      // MARK: - CacheTrackerPlainModel
-//      required init() {}
-//  }
+//  class SomeModuleEntityModel { }
+//  extension SomeModuleEntityModel: CacheTrackerPlainModel {}
 //  More info at https://github.com/ladeiko/CacheTracker
 
 typealias {{ prefix }}{{ module_info.name }}ModuleEntityModel = SomeModuleEntityModel
@@ -23,7 +21,7 @@ extension {{ prefix }}{{ module_info.name }}ModuleEntityModel: ArrayCacheTracker
         return true
     }
 
-    static func sort(_ descriptors: [NSSortDescriptor], lhs: Self, rhs: Self) -> Bool {
+    static func sort(_ descriptors: [NSSortDescriptor], lhs: {{ prefix }}{{ module_info.name }}ModuleEntityModel, rhs: {{ prefix }}{{ module_info.name }}ModuleEntityModel) -> Bool {
         return false
     }
 }
