--- a/Code/Helpers/moduleentitymodel.complex.cachetracker_array.swift.liquid
+++ b/Code/Helpers/moduleentitymodel.complex.cachetracker_array.swift.liquid
@@ -1,6 +1,7 @@
 {% include 'header' %}
 
 import CacheTrackerConsumer
+import CacheTracker
 
 // TODO: Replace SomeModuleEntityModel with project model implementing CacheTracker/CacheTrackerPlainModel protocol
 // Example:
@@ -10,6 +11,17 @@ import CacheTrackerConsumer
 //  More info at https://github.com/ladeiko/CacheTracker
 
 typealias {{ prefix }}{{ module_info.name }}ModuleEntityModel = SomeModuleEntityModel
+
+extension {{ prefix }}{{ module_info.name }}ModuleEntityModel: ArrayCacheTrackerElement {
+
+    func evaluate(_ predicate: NSPredicate) -> Bool {
+        return true
+    }
+
+    static func sort(_ descriptors: [NSSortDescriptor], lhs: Self, rhs: Self) -> Bool {
+        return false
+    }
+}
 
 class {{ prefix }}{{ module_info.name }}ModuleEmbeddableModel: CacheTrackerPlainRecurrentConsumerItem, {{ prefix }}{{ module_info.name }}Embeddable {
 
