fix table as root

--- a/Code/View/view_controller.root_tableview.swift.liquid
+++ b/Code/View/view_controller.root_tableview.swift.liquid
@@ -14,7 +14,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
     // MARK: - Vars
 
     private var context: {{ prefix }}{{ module_info.name }}ViewCellContext!
-    private let models = {{ prefix }}{{ module_info.name }}ModuleModel.allCases
+    private let models = {{ prefix }}{{ module_info.name }}EntityModel.allCases
 
     // MARK: - Life cycle
 
